--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     --slot-border:#d9d1c7;
   }
   *{box-sizing:border-box; -webkit-tap-highlight-color:transparent;}
-  html,body{height:100%;}
+  html,body{vh:100%; width:auto;}
   body{
     margin:0; background:var(--bg); color:var(--fg);
     font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Pretendard,Apple SD Gothic Neo,Malgun Gothic,Helvetica,Arial,"Noto Sans KR",sans-serif;
