--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
   /* Start 버튼(크게) - 배너 아래로 위치 */
   .action-area{
-  display:flex; justify-content:center; gap:10px;
-  margin:12px 0 calc(env(safe-area-inset-bottom, 0px) + 36px);
+  display:flex; justify-content:center; gap:10px; margin:12px 0 calc(env(safe-area-inset-bottom, 12px) + 36px);
 }
   button{
     appearance:none; border:none; border-radius:999px;
