--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
 
   /* Start 버튼(크게) - 배너 아래로 위치 */
   .action-area{
-  display:flex; justify-content:center; gap:10px; margin-bottom:36px 0 calc(env(safe-area-inset-bottom, 0px) + 36px);
+  position:relative;
+  display:flex; justify-content:center; gap:10px;
+  margin-top:20px;
+}
+.action-area button{
+  position:relative;
+  bottom:40px;   /* ← 원하는 만큼 위로 올림 */
 }
   button{
     appearance:none; border:none; border-radius:999px;
